--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+.DS_Store
+node_modules/
+.env
+.venv/
+venv/
+.pytest_cache/
+__pycache__/
+*.py[cod]
+*.swp
+*.log
+coverage/
+.vscode/
 # OS Files
 .DS_Store
 Thumbs.db
